--- a/TextAdventure_GameEngine/TextAdventure_GameEngine.csproj
+++ b/TextAdventure_GameEngine/TextAdventure_GameEngine.csproj
@@ -62,6 +62,7 @@
     </Content>
     <Content Include="TestRoom_0.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <SubType>Designer</SubType>
     </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
