--- a/TextAdventure_GameEngine/TextAdventure_GameEngine.csproj
+++ b/TextAdventure_GameEngine/TextAdventure_GameEngine.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="UserActions\Drop.cs" />
     <Compile Include="UserActions\Examine.cs" />
     <Compile Include="Exit.cs" />
     <Compile Include="GameController.cs" />
