--- a/TextAdventure_GameEngine/TextAdventure_GameEngine.csproj
+++ b/TextAdventure_GameEngine/TextAdventure_GameEngine.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="InteractableObject.cs" />
+    <Compile Include="Prop.cs" />
     <Compile Include="UserActions\Use.cs" />
     <Compile Include="UserActions\Drop.cs" />
     <Compile Include="UserActions\Examine.cs" />
