Add restarting and saving

--- a/TextAdventure_GameEngine/TextAdventure_GameEngine.csproj
+++ b/TextAdventure_GameEngine/TextAdventure_GameEngine.csproj
@@ -46,6 +46,8 @@
     <Compile Include="Character.cs" />
     <Compile Include="InteractableObject.cs" />
     <Compile Include="Prop.cs" />
+    <Compile Include="UserActions\Discard.cs" />
+    <Compile Include="UserActions\Restart.cs" />
     <Compile Include="UserActions\Talk.cs" />
     <Compile Include="UserActions\Use.cs" />
     <Compile Include="UserActions\Drop.cs" />
