--- a/TextAdventure_GameEngine/TextAdventure_GameEngine.csproj
+++ b/TextAdventure_GameEngine/TextAdventure_GameEngine.csproj
@@ -47,6 +47,7 @@
     <Compile Include="InteractableObject.cs" />
     <Compile Include="Prop.cs" />
     <Compile Include="UserActions\Discard.cs" />
+    <Compile Include="UserActions\DropSilent.cs" />
     <Compile Include="UserActions\Restart.cs" />
     <Compile Include="UserActions\Talk.cs" />
     <Compile Include="UserActions\Use.cs" />
@@ -119,6 +120,10 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <SubType>Designer</SubType>
     </Content>
+    <Content Include="Witcher\Basement_Joss.xml" />
+    <Content Include="Witcher\Basement_JossMother.xml" />
+    <Content Include="Witcher\Basement_JossWolf.xml" />
+    <Content Include="Witcher\Basement_Nekker.xml" />
     <Content Include="Witcher\Clearing.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
@@ -132,15 +137,22 @@
     <Content Include="Witcher\Ending.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="Witcher\Ending_Joss.xml" />
+    <Content Include="Witcher\Ending_JossMother.xml" />
+    <Content Include="Witcher\Ending_JossWolf.xml" />
     <Content Include="Witcher\Hall.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Witcher\HallDark.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="Witcher\Hall_Joss.xml" />
+    <Content Include="Witcher\Hall_JossMother.xml" />
+    <Content Include="Witcher\Hall_JossWolf.xml" />
     <Content Include="Witcher\Stream.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="Witcher\Subbasement.xml" />
     <Content Include="Witcher\Trench.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
@@ -148,20 +160,20 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <SubType>Designer</SubType>
     </Content>
-    <Content Include="Witcher\Trench_RelockGate.xml">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-      <SubType>Designer</SubType>
-    </Content>
     <Content Include="Witcher\Village_Jack.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="Witcher\WitchsHut_Joss.xml" />
     <Content Include="Witcher\WitchsHut.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="Witcher\WitchsHut_JossMother.xml" />
+    <Content Include="Witcher\WitchsHut_JossWolf.xml" />
     <Content Include="Witcher\Woods_Jack.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <SubType>Designer</SubType>
     </Content>
+    <Content Include="Witcher\Subbasement_JossMother.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
