Implement dialogue system in subbasement of Witcher 4

--- a/TextAdventure_GameEngine/TextAdventure_GameEngine.csproj
+++ b/TextAdventure_GameEngine/TextAdventure_GameEngine.csproj
@@ -53,6 +53,7 @@
     <Compile Include="UserActions\DropSilent.cs" />
     <Compile Include="UserActions\Help.cs" />
     <Compile Include="UserActions\Hint.cs" />
+    <Compile Include="UserActions\IncDialogue.cs" />
     <Compile Include="UserActions\Open.cs" />
     <Compile Include="UserActions\Restart.cs" />
     <Compile Include="UserActions\Talk.cs" />
@@ -78,6 +79,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Characters\mother.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Orig_GameData\CaveEntrance.xml" />
     <Content Include="Orig_GameData\CaveMouth.xml" />
     <Content Include="Orig_GameData\Cell_Player.xml" />
