Implement party mechanic

--- a/TextAdventure_GameEngine/TextAdventure_GameEngine.csproj
+++ b/TextAdventure_GameEngine/TextAdventure_GameEngine.csproj
@@ -54,6 +54,7 @@
     <Compile Include="UserActions\Help.cs" />
     <Compile Include="UserActions\Hint.cs" />
     <Compile Include="UserActions\IncDialogue.cs" />
+    <Compile Include="UserActions\JoinParty.cs" />
     <Compile Include="UserActions\Open.cs" />
     <Compile Include="UserActions\Restart.cs" />
     <Compile Include="UserActions\Talk.cs" />
