start conditional data selection

--- a/TextAdventure_GameEngine/TextAdventure_GameEngine.csproj
+++ b/TextAdventure_GameEngine/TextAdventure_GameEngine.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Character.cs" />
     <Compile Include="CharacterDataBlock.cs" />
+    <Compile Include="ConditionalData.cs" />
     <Compile Include="Container.cs" />
     <Compile Include="GameLog.cs" />
     <Compile Include="InteractableObject.cs" />
